--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-flags-select": "^2.2.3",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
