--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
   "main": "index.js",
   "devDependencies": {},
   "author": "naveed",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "/campaigns/sat-coaching-dubai/"
 }
